# ros-cfh-example

./: .gitignore  LICENSE  README.md
cfh_msgs_example/: CMakeLists.txt  LICENSE  package.xml
cfh_msgs_example/msg/: CameraControl.msg
cfh_node_example/: CMakeLists.txt  package.xml
cfh_node_example/include/: client.h
cfh_node_example/src/: cfh_node_example.cpp  crypto.cpp  peer.cpp
refbox_msgs_example/: CMakeLists.txt  package.xml
refbox_msgs_example/cmake/modules/: FindProtocolBuffers.cmake  protobuf-generate-cpp.cmake
refbox_msgs_example/msg/: AttentionMessage.msg
refbox_node_example/: CMakeLists.txt  README.md  package.xml
refbox_node_example/include/: message_register.h  peer.h  server.h
refbox_node_example/launch/: rockin_refbox.launch
refbox_node_example/src/: client.cpp  message_register.cpp  refbox_node_example.cpp  server.cpp
ros_cfh_example/: CMakeLists.txt  package.xml
