<?xml version="1.0"?>
<package>
  <name>refbox_msgs_example</name>
  <version>0.0.1</version>
  <description>The Refbox Msgs package</description>
  <maintainer email="Kai.Seidensticker@ovgu.de">Kai Seidensticker</maintainer>
  <license>MIT</license>

  <author email="Kai.Seidensticker@ovgu.de">Kai Seidensticker</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
